<resources>
    <string name="app_name">Room Learning</string>
    <string name="add_data">Add Data</string>
    <string name="member">Member</string>
    <string name="update_data">Update Data</string>
    <string name="id">Id</string>
    <string name="type">Type</string>
    <string name="merchant">Merchant</string>
    <string name="number">Number</string>
    <string name="time">Time</string>
</resources>