<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_data"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/edtAddName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/member"
        android:layout_margin="16dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtAddType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/type"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtAddMerchant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/merchant"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtAddTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtAddNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="textPersonName"
        tools:ignore="TextFields"
        android:autofillHints="" />


    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_data"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        />
</LinearLayout>