<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UpdateActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/update_data"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtUpdateId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtUpdateMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/member"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtUpdateType"
            android:layout_width="166dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/type"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtUpdateMerchant"
            android:layout_width="166dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/merchant"
            android:inputType="textPersonName"
            android:singleLine="false" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtUpdateTime"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtUpdateNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_backgroung_edit"
            android:onClick="updateButton"
            app:srcCompat="@drawable/edit" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_background_delete"
            android:onClick="deleteButton"
            app:srcCompat="@drawable/delete" />
    </LinearLayout>

</LinearLayout>