<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="395dp"
            android:layout_height="88dp">

            <TextView
                android:id="@+id/txtId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/id"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtMember"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="150dp"
                android:layout_marginRight="150dp"
                android:text="@string/member"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/txtId"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="110dp"
                android:layout_height="15dp"
                android:layout_marginBottom="16dp"
                android:text="@string/time"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.261"
                app:layout_constraintStart_toEndOf="@+id/txtNumber"
                tools:text="@string/time" />

            <TextView
                android:id="@+id/txtNumber"
                android:layout_width="89dp"
                android:layout_height="36dp"
                android:layout_marginBottom="4dp"
                android:text="@string/number"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.173"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtMerchant"
                android:layout_width="76dp"
                android:layout_height="19dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp"
                android:text="@string/merchant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toEndOf="@+id/txtId"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtType"
                android:layout_width="76dp"
                android:layout_height="19dp"
                android:layout_marginTop="16dp"
                android:text="@string/type"
                app:layout_constraintEnd_toStartOf="@+id/txtMerchant"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toEndOf="@+id/txtMember"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>